[gd_scene load_steps=10 format=2]

[ext_resource path="res://Music/Try Again.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Blocks/Block2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Blocks/Block4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Blocks/Block3.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Other/Blocks.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Blocks",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4 )

[node name="Blocks" type="Area2D" groups=[
"Blocks",
]]
script = ExtResource( 5 )

[node name="Static" type="StaticBody2D" parent="."]

[node name="Col" type="CollisionShape2D" parent="Static"]
shape = SubResource( 1 )
one_way_collision = true

[node name="OnBlock" type="Area2D" parent="."]

[node name="Col" type="CollisionShape2D" parent="OnBlock"]
position = Vector2( 0, -5 )
shape = SubResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Blocks"

[node name="Col" type="CollisionShape2D" parent="."]
rotation = 3.14159
shape = SubResource( 3 )
one_way_collision = true

[node name="SwitchBad" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="SwitchGood" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="TryAgainTimer" type="Timer" parent="."]

[node name="TryAgain" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Blocks_body_entered"]
[connection signal="body_entered" from="OnBlock" to="." method="_on_OnBlock_body_entered"]
[connection signal="timeout" from="SwitchBad" to="." method="_on_SwitchBad_timeout"]
[connection signal="timeout" from="SwitchGood" to="." method="_on_SwitchGood_timeout"]
[connection signal="timeout" from="TryAgainTimer" to="." method="_on_TryAgainTimer_timeout"]
